terminando a parte 2 do curso JS:manipulando o DOM

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <p class="estatistica-numero">768</p>
                 </div>
             </div>
+
             <div class="estatistica">
                 <p class="estatistica-titulo">Poder</p>
                 <div class="estatistica-valor">
@@ -38,6 +39,7 @@
                     <p class="estatistica-numero">289</p>
                 </div>
             </div>
+
             <div class="estatistica">
                 <p class="estatistica-titulo">Velocidade</p>
                 <div class="estatistica-valor">
@@ -57,7 +59,9 @@
                             <buttom class="controle-ajuste">+</buttom>
                         </div>
                     </div>
+
                     <hr class="linha">
+
                     <div class="peca">
                         <label for="" class="peca-titulo">Blindagem</label>
                         <div class="controle">
@@ -66,7 +70,9 @@
                             <buttom class="controle-ajuste">+</buttom>
                         </div>
                     </div>
+
                     <hr class="linha">
+
                     <div class="peca">
                         <label for="" class="peca-titulo">Núcleos</label>
                         <div class="controle">
@@ -75,7 +81,9 @@
                             <buttom class="controle-ajuste">+</buttom>
                         </div>
                     </div>
+
                     <hr class="linha">
+
                     <div class="peca">
                         <label for="" class="peca-titulo">Pernas</label>
                         <div class="controle">
@@ -84,7 +92,9 @@
                             <buttom class="controle-ajuste">+</buttom>
                         </div>
                     </div>
+
                     <hr class="linha">
+
                     <div class="peca">
                         <label for="" class="peca-titulo">Foguetes</label>
                         <div class="controle">
@@ -94,9 +104,13 @@
                         </div>
                     </div>
                 </div>
+
                 <input type="submit" value="Iniciar produção" class="producao" id="producao">
             </form>
         </section>
     </main>
+
+    <script scr="js/main.js"></script>
+    
 </body>
 </html>
