--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Braços</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" id="subtrair">-</buttom>
+                            <input type="text" class="controle-contador" value="00" id="braco">
+                            <buttom class="controle-ajuste" id="somar">+</buttom>
                         </div>
                     </div>
 
@@ -109,8 +109,7 @@
             </form>
         </section>
     </main>
-
-    <script scr="js/main.js"></script>
+    <script src="./js/main.js"></script>
     
 </body>
 </html>
